# starship-game

./: .gitignore  CMakeLists.txt  README.md
src/: SceneManager.cpp  SceneManager.h  gl_canvas2d.cpp  gl_canvas2d.h  main.cpp
src/actors/: Bullet.cpp  Bullet.h  Monster.cpp  Monster.h  Spaceship.cpp  Spaceship.h  Starship.cpp  Starship.h
src/base/: Utils.h
src/base/interfaces/: IEntity.h  IIntersect.h  IKeyboard.h  IMouse.h  IRender.h
